# lite-llm

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  building-litert-lm.md  config.toml  examples.md
.cargo/: config.toml
src/: config.rs  db.rs  main.rs
src/api/: chat.rs  command.rs  download.rs  mod.rs  models.rs  remember.rs  router.rs  sessions.rs  tools.rs
src/engine/: litert.rs  llama.rs  mod.rs  model_manager.rs  session.rs
src/ffi/: engine.h  mod.rs
src/memory/: store.rs
src/migrations/: 001_init.sql  002_memories.sql  003_memories_porter.sql
src/tools/: executor.rs  mod.rs  registry.rs
