[package]
name = "lite-llm"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.70"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
rumqttc = "0.24"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
jsonschema = "0.26"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
shellexpand = "3.1"
hf-hub = { version = "0.3", features = ["tokio"] }
minijinja = "2"
